QtQml: Avoid double-wrapping when converting to QVariantList

Amends commit 1b89c1edcae68351632c2755e5408410c2ff98e3

Fixes: QTBUG-139764
Pick-to: 6.8
Change-Id: I1488527a235d74fc0352c72b9bfb69589c2f3d93
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit ce266fbcddc48edd63c4ba8c4a6f43fb2df48153)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 1b33b8754573b2922ba19b143ac13f733a52630b)