tests/auto/qml/qmlcppcodegen/data/sequenceToIterable2.qml
@@ -1,0 +1,6 @@
+import QtQml
+import TestTypes
+
+QtObject {
+    property list<Entry> converted: EntrySource.convertEntries(EntrySource.getEntries());
+}
